--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/cheerio": "^0.22.35",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
