--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cheerio": "^0.22.35",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^22.6.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
